--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8225,7 +8225,7 @@ h1, h2, h3, h4, h5,
     #sidebar ul li a {
       padding: 10px 0;
       display: block;
-      color: rgba(255, 255, 255, 0.6);
+      color: #fff;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
       #sidebar ul li a span {
         color: #44bef1; }
