--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8131,179 +8131,191 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+/*
+    DEMO STYLE
+*/
 
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
-  font-family: "Poppins", Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.8;
-  font-weight: normal;
-  background: #fafafa;
-  color: gray; }
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
+}
 
-a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease;
-  color: #3445b4; }
-  a:hover, a:focus {
-    text-decoration: none !important;
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    /* padding: 15px 10px; */
+    background: #000000;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    z-index: 3;
+    min-width: 100vw;
+    position:fixed;
+}
+
+.navbar-btn {
+    box-shadow: none;
     outline: none !important;
-    -webkit-box-shadow: none;
-    box-shadow: none; }
+    border: none;
+}
 
-button {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease; }
-  button:hover, button:focus {
-    text-decoration: none !important;
-    outline: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important; }
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
 
-h1, h2, h3, h4, h5,
-.h1, .h2, .h3, .h4, .h5 {
-  line-height: 1.5;
-  font-weight: 400;
-  font-family: "Poppins", Arial, sans-serif;
-  color: #000; }
-
-.ftco-section {
-  padding: 7em 0; }
-
-.ftco-no-pt {
-  padding-top: 0; }
-
-.ftco-no-pb {
-  padding-bottom: 0; }
-
-.heading-section {
-  font-size: 28px;
-  color: #000; }
-  .heading-section small {
-    font-size: 18px; }
-
-.img {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center; }
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
 
 .wrapper {
-  width: 100%; }
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+   
+
+}
 
 #sidebar {
-  min-width: 270px;
-  max-width: 270px;
-  background: #3445b4;
-  color: #fff;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  position: relative; }
-  #sidebar .h6 {
-    color: #fff; }
-  #sidebar.active {
-    margin-left: -270px; }
-  #sidebar h1 {
-    margin-bottom: 20px;
-    font-weight: 700;
-    font-size: 30px; }
-    #sidebar h1 .logo {
-      color: #fff; }
-      #sidebar h1 .logo span {
-        font-size: 14px;
-        color: #44bef1;
-        display: block; }
-  #sidebar ul.components {
-    padding: 0; }
-  #sidebar ul li {
-    font-size: 16px; }
-    #sidebar ul li > ul {
-      margin-left: 10px; }
-      #sidebar ul li > ul li {
-        font-size: 14px; }
-    #sidebar ul li a {
-      padding: 10px 0;
-      display: block;
-      color: #fff;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-      #sidebar ul li a span {
-        color: #44bef1; }
-      #sidebar ul li a:hover {
-        color: #fff; }
-    #sidebar ul li.active > a {
-      background: transparent;
-      color: #fff; }
-  @media (max-width: 991.98px) {
-    #sidebar {
-      margin-left: -270px; }
-      #sidebar.active {
-        margin-left: 0; } }
-  #sidebar .custom-menu {
-    display: inline-block;
-    position: absolute;
-    top: 20px;
-    right: 0;
-    margin-right: -20px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s; }
-    @media (prefers-reduced-motion: reduce) {
-      #sidebar .custom-menu {
-        -webkit-transition: none;
-        -o-transition: none;
-        transition: none; } }
-    #sidebar .custom-menu .btn {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      position: relative; }
-      #sidebar .custom-menu .btn i {
-        margin-right: -40px;
-        font-size: 14px; }
-      #sidebar .custom-menu .btn.btn-primary {
-        background: transparent;
-        border-color: transparent; }
-        #sidebar .custom-menu .btn.btn-primary:after {
-          z-index: -1;
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          content: '';
-          -webkit-transform: rotate(45deg);
-          -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-          background: #3445b4;
-          border-radius: 10px; }
-        #sidebar .custom-menu .btn.btn-primary:hover, #sidebar .custom-menu .btn.btn-primary:focus {
-          background: transparent !important;
-          border-color: transparent !important; }
+  margin-top: 100px;
+  min-height: 100vh;
+    min-width: 250px;
+    max-width: 250px;
+    background: #6F807F;
+    color: #fff;
+    transition: all 0.3s;
+    position: fixed;
+    z-index: 2;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6F807F;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #fff;
+    background: #61677A;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #61677A;
+}
 
 a[data-toggle="collapse"] {
-  position: relative; }
+    position: relative;
+}
 
 .dropdown-toggle::after {
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
 
-@media (max-width: 991.98px) {
-  #sidebarCollapse span {
-    display: none; } }
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
 
 #content {
-  width: 100%;
-  padding: 0;
-  min-height: 100vh;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s; }
+     margin-top: 50px;
+    width:95%;
+    /* padding: 20px; */
+    overflow-x: hidden;
+    min-height: 100vh;
+    transition: all 0.3s;
+    margin-left: 120px ;
+}
+
+#sidebar.active ~#content{
+ 
+ margin-left: -100px ;
+}
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+}
 
 .btn.btn-primary {
   background: #3445b4;
