--- a/public/sidebar-10/css/style.css
+++ b/public/sidebar-10/css/style.css
@@ -8144,7 +8144,7 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #ED213A; }
+  color: #000000; }
   a:hover, a:focus {
     text-decoration: none !important;
     outline: none !important;
@@ -8192,16 +8192,16 @@ h1, h2, h3, h4, h5,
     right: 0;
     bottom: 0;
     content: '';
-    background: #ED213A;
-    background: -moz-linear-gradient(-45deg, #ED213A 0%, #93291E 100%);
-    background: -webkit-gradient(left top, right bottom, color-stop(0%, #ED213A), color-stop(100%, #93291E));
-    background: -webkit-linear-gradient(-45deg, #ED213A 0%, #93291E 100%);
-    background: -o-linear-gradient(-45deg, #ED213A 0%, #93291E 100%);
-    background: -ms-linear-gradient(-45deg, #ED213A 0%, #93291E 100%);
-    background: -webkit-linear-gradient(315deg, #ED213A 0%, #93291E 100%);
-    background: -o-linear-gradient(315deg, #ED213A 0%, #93291E 100%);
-    background: linear-gradient(135deg, #ED213A 0%, #93291E 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ED213A', endColorstr='#93291E', GradientType=1 );
+    background: #000000;
+    background: -moz-linear-gradient(-45deg, #000000 0%, #252B48 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, #000000), color-stop(100%, #252B48));
+    background: -webkit-linear-gradient(-45deg, #000000 0%, #252B48 100%);
+    background: -o-linear-gradient(-45deg, #000000 0%, #252B48 100%);
+    background: -ms-linear-gradient(-45deg, #000000 0%, #252B48 100%);
+    background: -webkit-linear-gradient(315deg, #000000 0%, #252B48 100%);
+    background: -o-linear-gradient(315deg, #000000 0%, #252B48 100%);
+    background: linear-gradient(135deg, #000000 0%, #252B48 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#252B48', GradientType=1 );
     opacity: .7;
     z-index: -1; }
   #sidebar.active {
@@ -8243,14 +8243,14 @@ h1, h2, h3, h4, h5,
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
       #sidebar ul li a:hover {
         color: #fff;
-        background: #ED213A;
-        border-bottom: 1px solid #ED213A; }
+        background: #000000;
+        border-bottom: 1px solid #000000; }
     #sidebar ul li.active > a {
       background: transparent;
       color: #fff; }
       #sidebar ul li.active > a:hover {
-        background: #ED213A;
-        border-bottom: 1px solid #ED213A; }
+        background: #000000;
+        border-bottom: 1px solid #000000; }
   @media (max-width: 991.98px) {
     #sidebar {
       margin-right: -300px; }
@@ -8274,7 +8274,7 @@ h1, h2, h3, h4, h5,
         -o-transition: none;
         transition: none; } }
     #sidebar .custom-menu .btn.btn-primary {
-      background: #ED213A;
+      background: #000000;
       border-color: transparent;
       position: relative;
       color: #000;
@@ -8317,11 +8317,11 @@ a[data-toggle="collapse"] {
   transition: all 0.3s; }
 
 .btn.btn-primary {
-  background: #ED213A;
-  border-color: #ED213A; }
+  background: #000000;
+  border-color: #000000; }
   .btn.btn-primary:hover, .btn.btn-primary:focus {
-    background: #ED213A !important;
-    border-color: #ED213A !important; }
+    background: #000000 !important;
+    border-color: #000000 !important; }
 
 .footer p {
   color: rgba(255, 255, 255, 0.8); }
